--- a/src/pages/services/bar-refrigerator-repair-los-angeles.astro
+++ b/src/pages/services/bar-refrigerator-repair-los-angeles.astro
@@ -33,9 +33,10 @@ import "css/service/style_services.css";
         <div class="page-header-f">
           <div class="page-header-f-rel">
             <img
+              width="2000px"
+              height="1000px"
               src="/refrigerator-repair/bar-refrigerator-page_header_photos.webp"
               alt="Bar Refrigerator Repair Los Angeles"
-              loading="lazy"
             />
           </div>
 
