--- a/src/pages/services/bbq-grill-repair-los-angeles.astro
+++ b/src/pages/services/bbq-grill-repair-los-angeles.astro
@@ -16,7 +16,7 @@ import "css/service/style_services.css";
 <Reviews />
 <Layout title="BBQ Grill Repair Los Angeles and Nearby Areas">
   <Container>
-    <main>
+    <main style="max-width: 1920px; padding: 0 10%; margin: 0 auto;">
       <h1>
         <span class="animate-charcter">BBQ Grill Repair Los Angeles</span>
         and Nearby Areas
