--- a/src/pages/services/commercial-showcase-refrigerator-repair-los-angeles.astro
+++ b/src/pages/services/commercial-showcase-refrigerator-repair-los-angeles.astro
@@ -33,10 +33,11 @@ import "css/service/style_services.css";
 
           <div class="page-header-f-rel">
             <img
-            src="/showcase-refrigerator/showcase-refrigerator-page_header_photos.webp"
-            alt="Showcase Refrigerator Repair Los Angeles"
-            loading="lazy"
-          />
+              width="2000px"
+              height="1000px"
+              src="/showcase-refrigerator/showcase-refrigerator-page_header_photos.webp"
+              alt="Showcase Refrigerator Repair Los Angeles"
+            />
           </div>
 
           <div class="page-header-f-gradient">
