--- a/src/pages/services/commercial-walk-in-cooler-repair-los-angeles.astro
+++ b/src/pages/services/commercial-walk-in-cooler-repair-los-angeles.astro
@@ -35,10 +35,11 @@ import "css/service/style_services.css";
 
           <div class="page-header-f-rel">
             <img
-            src="/commercial-walk-in-freezer/walk-in-cooler-page_header_photos.webp"
-            alt="Walk in Cooler Repair Los Angeles"
-            loading="lazy"
-          />
+              width="2000px"
+              height="1000px"
+              src="/commercial-walk-in-freezer/walk-in-cooler-page_header_photos.webp"
+              alt="Walk in Cooler Repair Los Angeles"
+            />
           </div>
 
           <div class="page-header-f-gradient">
