--- a/src/pages/services/dishwasher-repair-los-angeles.astro
+++ b/src/pages/services/dishwasher-repair-los-angeles.astro
@@ -36,9 +36,10 @@ import "css/service/style_services.css";
 
           <div class="page-header-f-rel">
             <img
+            width="2000px"
+            height="1000px"
             src="/dishwasher/page_header_photos-dishwasher.webp"
             alt="Dishwasher Repair Los Angeles"
-            loading="lazy"
             />
           </div>
 
