--- a/src/pages/services/dryer-repair-los-angeles.astro
+++ b/src/pages/services/dryer-repair-los-angeles.astro
@@ -35,9 +35,10 @@ import "css/service/style_services.css";
 
           <div class="page-header-f-rel">
             <img
+            width="2000px"
+            height="1000px"
             src="/dryer-repair/dryer-page_header_photos.webp"
             alt="Dryer repair Los Angeles"
-            loading="lazy"
             />
           </div>
 
