--- a/src/pages/services/induction-cooktop-repair-los-angeles.astro
+++ b/src/pages/services/induction-cooktop-repair-los-angeles.astro
@@ -33,9 +33,11 @@ import "css/service/style_services.css";
 
           <div class="page-header-f-rel">
           <img
+            width="2000px"
+            height="1000px"
             src="/stove-repair/stove-page_header_photos.webp"
             alt="Induction Cooktop Repair Los Angeles"
-            loading="lazy"/>
+            />
           </div>
 
           <div class="page-header-f-gradient">
