--- a/src/pages/services/range-hood-repair-los-angeles.astro
+++ b/src/pages/services/range-hood-repair-los-angeles.astro
@@ -16,7 +16,7 @@ import "css/service/style_services.css";
 <Reviews />
 <Layout title="Same Day Range Hood Range Repair Los Angeles">
   <Container>
-    <main>
+    <main style="max-width: 1920px; padding: 0 10%; margin: 0 auto;">
       <h1>
         <span class="animate-charcter">Same Day Range Hood Repair</span> Los Angeles
         and Surrounding Areas
