--- a/src/css/service/style_services.css
+++ b/src/css/service/style_services.css
@@ -120,6 +120,7 @@ main {
 
 .page-header-f-rel {
     position: relative;
+    display: grid;
 }
 
 .page-header-f-gradient {
@@ -132,14 +133,14 @@ main {
 }
 
 .page-header-f img {
-    width: 65%;
+    max-width: 65%;
 }
 
 
 .page-header-p-full {
     max-width: 1920px;
     justify-self: center;
-    padding: 0 3% 1% 3%;
+    padding: 0 3% 3% 3%;
     width: 100%;
     text-align: left;
 }
@@ -412,7 +413,6 @@ main {
 
 
 .page213-container {
-    /* display: grid; */
     grid-column: 2 / 8;
     position: relative;
     margin: 0 2% 0 2%;
@@ -753,9 +753,6 @@ main {
 
 .ph-logo-brand {
     display: grid;
-    /* grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr; */
-    /* justify-self: left; */
     grid-gap: 1.3em;
     padding: 10px 12px 10px 12px;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
@@ -775,7 +772,6 @@ main {
     border-radius: 50%;
     cursor: pointer;
     box-shadow: 0px 0px 11px 3px #87878738;
-    /* box-shadow: 0px 0px 13px 1px rgb(135 135 135 / 11%); */
     transition: all 0.3s ease-out;
 }
 
@@ -854,7 +850,6 @@ main {
     border-radius: 2px;
     width: 0%;
     position: absolute;
-    /* margin-top: 32px; */
     transition: 0.3s ease-out;
 }
 
@@ -1404,7 +1399,6 @@ main {
     width: 100%;
     text-align: left;
     border-top: 1px solid #dedede;
-    /* border-top: 1px solid #75baf566; */
     padding: 2% 2%;
     display: flex;
     justify-content: space-between;
@@ -1625,9 +1619,37 @@ main {
 
 
 
+
+
+
+
+
+
+
+
+
 @media (max-width:1024px) {
 
+    .page-header-p-full {
+        padding: 0 3% 3% 3%;
+    }
+
+    .page-header-f {
+        position: relative;
+        width: auto;
+        z-index: 2;
+        margin-left: 0;
+        justify-self: center;
+        margin: 7px 5% 17px 5%;
+    }
+
     .page-header-f img {
+        justify-self: center;
+        border-radius: 10px;
+        box-shadow: 4px 4px 13px 0 rgba(0, 0, 0, 0.35);
+    }
+
+    .page-header-f-gradient {
         display: none;
     }
 
@@ -1728,7 +1750,11 @@ main {
 
 
 
-@media (max-width:768px) {
+@media (max-width:768px) { 
+
+    .page-header-f img {
+        max-width: 100%;
+    }
 
     .page-header-d-full {
         padding: 1% 0;
@@ -1864,3 +1890,7 @@ main {
     }
 
 }
+
+
+
+
