--- a/src/pages/services/commercial-dryer-repair-los-angeles.astro
+++ b/src/pages/services/commercial-dryer-repair-los-angeles.astro
@@ -34,9 +34,10 @@ import "css/service/style_services.css";
         <div class="page-header-f">
           <div class="page-header-f-rel">
             <img
+              width="2000px"
+              height="1000px"
               src="/commercial-dryer/commercial-dryer-page_header_photos.webp"
               alt="Commercial Dryer Repair Los Angeles"
-              loading="lazy"
             />
           </div>
 
