--- a/src/pages/services/commercial-fryer-machine-repair-los-angeles.astro
+++ b/src/pages/services/commercial-fryer-machine-repair-los-angeles.astro
@@ -33,9 +33,11 @@ import "css/service/style_services.css";
 
           <div class="page-header-f-rel">
           <img
+            width="2000px"
+            height="1000px"
             src="/commercial-fryer-machine/commercial-fryer-machinepage_header_photos.webp"
             alt="Commercial Fryer Machine Repair Los Angeles"
-            loading="lazy"/>
+            />
           </div>
 
           <div class="page-header-f-gradient">
