--- a/src/pages/services/commercial-ice-machine-repair-los-angeles.astro
+++ b/src/pages/services/commercial-ice-machine-repair-los-angeles.astro
@@ -34,9 +34,10 @@ import "css/service/style_services.css";
         <div class="page-header-f">
           <div class="page-header-f-rel">
             <img
+              width="2000px"
+              height="1000px"
               src="/ice-machine-repair/ice-machine-page_header_photos.webp"
               alt="Ice Machine Repair Los Angeles"
-              loading="lazy"
             />
           </div>
 
