--- a/src/pages/services/cooktop-repair-los-angeles.astro
+++ b/src/pages/services/cooktop-repair-los-angeles.astro
@@ -34,9 +34,10 @@ import "css/service/style_services.css";
 
           <div class="page-header-f-rel">
             <img
+            width="2000px"
+            height="1000px"
             src="/stove-repair/stove-page_header_photos.webp"
             alt="Cooktop Repair" alt="Cooktop repair Los Angeles"
-            loading="lazy"
             />
           </div>
 
