--- a/src/pages/services/freezer-repair-los-angeles.astro
+++ b/src/pages/services/freezer-repair-los-angeles.astro
@@ -34,9 +34,10 @@ import "css/service/style_services.css";
   
             <div class="page-header-f-rel">
               <img
+              width="2000px"
+              height="1000px"
               src="/freezer/freezer-page_header_photos.webp"
               alt="Freezer Repair Los Angeles?"
-              loading="lazy"
             />
             </div>
   
