--- a/src/pages/services/furnace-repair-los-angeles.astro
+++ b/src/pages/services/furnace-repair-los-angeles.astro
@@ -29,9 +29,10 @@ import "css/service/style_services.css";
 
         <div class="page-header-f">
           <img
+            width="2000px"
+            height="1000px"
             src="/furnace/page_header_photos-furnace.webp"
             alt="Furnace Repair"
-            loading="lazy"
           />
         </div>
       </div>
