--- a/src/pages/services/range-repair-los-angeles.astro
+++ b/src/pages/services/range-repair-los-angeles.astro
@@ -29,9 +29,10 @@ import "css/service/style_services.css";
 
         <div class="page-header-f">
           <img
+            width="2000px"
+            height="1000px"
             src="/stove-repair/stove-page_header_photos.webp"
             alt="Range Repair"
-            loading="lazy"
           />
         </div>
       </div>
