--- a/src/pages/services/stove-repair-los-angeles.astro
+++ b/src/pages/services/stove-repair-los-angeles.astro
@@ -35,9 +35,10 @@ import "css/service/style_services.css";
 
           <div class="page-header-f-rel">
             <img
+            width="2000px"
+            height="1000px"
             src="/stove-repair/stove-page_header_photos.webp"
             alt="Stove Repair Los Angeles"
-            loading="lazy"
             />
           </div>
 
