--- a/src/pages/services/washing-machine-repair-los-angeles.astro
+++ b/src/pages/services/washing-machine-repair-los-angeles.astro
@@ -33,9 +33,10 @@ import "css/service/style_services.css";
 
           <div class="page-header-f-rel">
             <img
+            width="2000px"
+            height="1000px"
             src="/washer-repair/washing-machines-page_header_photos.webp"
             alt="Whashing machine repair Los Angeles"
-            loading="lazy"
           />
           </div>
 
