--- a/src/pages/services/wine-cellar-repair-los-angeles.astro
+++ b/src/pages/services/wine-cellar-repair-los-angeles.astro
@@ -35,9 +35,10 @@ import "css/service/style_services.css";
 
           <div class="page-header-f-rel">
             <img
+            width="2000px"
+            height="1000px"
             src="/wine-сellar/wine-сellar-page_header_photos.webp"
             alt="Wine Cellar Repair"
-            loading="lazy"
           />
           </div>
 
