--- a/src/pages/services/wine-cooler-repair-los-angeles.astro
+++ b/src/pages/services/wine-cooler-repair-los-angeles.astro
@@ -35,9 +35,10 @@ import "css/service/style_services.css";
 
           <div class="page-header-f-rel">
             <img
+            width="2000px"
+            height="1000px"
             src="/commercial-wine-cooler/wine-cooler-page_header_photos.webp"
             alt="Wine Cooler Repair"
-            loading="lazy"
             />
           </div>
 
