--- a/src/pages/price-list/commercial-showcase-refrigerator-repair-cost.astro
+++ b/src/pages/price-list/commercial-showcase-refrigerator-repair-cost.astro
@@ -342,7 +342,7 @@ import "css/price/style_price.css";
 
       <Btn />
 
-      <div class="job-prices" id="labor-cost-anchor">
+      <div class="job-prices job-prices-cooktop" id="labor-cost-anchor">
         <div class="head_pricing-policy head_pricing-policy_foto">
           <div class="head_pricing-policy_foto-b">
             <img
