--- a/src/pages/price-list/dryer-repair-cost.astro
+++ b/src/pages/price-list/dryer-repair-cost.astro
@@ -326,7 +326,7 @@ import "css/price/style_price.css";
 
       <Btn />
 
-      <div class="job-prices" id="labor-cost-anchor">
+      <div class="job-prices job-prices-dryer" id="labor-cost-anchor">
         <div class="head_pricing-policy head_pricing-policy_foto">
           <div class="head_pricing-policy_foto-b">
             <img
@@ -859,7 +859,7 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a><h3>What are common issues with dryers?</h3></a>
+            <h3>What are common issues with dryers?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -921,7 +921,7 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a><h3>What are the benefits of regular dryer maintenance?</h3></a>
+            <h3>What are the benefits of regular dryer maintenance?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -976,7 +976,7 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a><h3>What are some dryer brands you service?</h3></a>
+            <h3>What are some dryer brands you service?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1010,7 +1010,9 @@ import "css/price/style_price.css";
         </div>
 
         <div class="FAQ">
-          <div class="fa"><a><h3>Can I repair my dryer myself?</h3></a></div>
+          <div class="fa">
+            <h3>Can I repair my dryer myself?</h3>
+          </div>
 
           <div class="fa_plus">︾</div>
 
@@ -1032,7 +1034,7 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a><h3>Do you offer emergency dryer repair services?</h3></a>
+            <h3>Do you offer emergency dryer repair services?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1060,7 +1062,7 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a><h3>What warranty do you offer on repairs?</h3></a>
+            <h3>What warranty do you offer on repairs?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1084,7 +1086,7 @@ import "css/price/style_price.css";
         </div>
 
         <div class="FAQ">
-          <div class="fa"><a><h3>Why is my dryer not heating up?</h3></a></div>
+          <div class="fa"><h3>Why is my dryer not heating up?</h3></div>
 
           <div class="fa_plus">︾</div>
 
@@ -1138,7 +1140,7 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a><h3>How often should I clean my dryer vents?</h3></a>
+            <h3>How often should I clean my dryer vents?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1160,11 +1162,9 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
-                What should I do if my dryer is making strange noises?
-              </h3></a
-            >
+            <h3>
+              What should I do if my dryer is making strange noises?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1213,7 +1213,7 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a><h3>Is it worth repairing an older dryer?</h3></a>
+            <h3>Is it worth repairing an older dryer?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1266,7 +1266,7 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a><h3>How can I extend the lifespan of my dryer?</h3></a>
+            <h3>How can I extend the lifespan of my dryer?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1290,7 +1290,7 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a><h3>What should I do if my dryer won't start?</h3></a>
+            <h3>What should I do if my dryer won't start?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1344,7 +1344,7 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a><h3>How can I troubleshoot a dryer that won't tumble?</h3></a>
+            <h3>How can I troubleshoot a dryer that won't tumble?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1370,11 +1370,9 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
-                Why does my dryer take longer than usual to dry clothes?
-              </h3></a
-            >
+            <h3>
+              Why does my dryer take longer than usual to dry clothes?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1395,11 +1393,9 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
-                What are the signs that my dryer needs professional servicing?
-              </h3></a
-            >
+            <h3>
+              What are the signs that my dryer needs professional servicing?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1438,7 +1434,7 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a><h3>How can I troubleshoot a dryer that won't tumble?</h3></a>
+            <h3>How can I troubleshoot a dryer that won't tumble?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1464,12 +1460,10 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 What are the typical costs associated with home appliance
                 repairs, and how do they compare to stove repair costs?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1496,12 +1490,10 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
-                What is the average dryer repair cost for electric appliances
-                like an electric dryer?
-              </h3></a
-            >
+            <h3>
+              What is the average dryer repair cost for electric appliances
+              like an electric dryer?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1519,12 +1511,10 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 Can the cost to fix a broken dryer vary based on the dryer brand
                 and model?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1542,12 +1532,10 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 What are common issues that lead to higher repair cost in gas
                 dryers?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1565,12 +1553,10 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a>
               <h3>
                 Is it worth repairing a dryer with a bad heating element, or
                 should it be replaced?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1589,12 +1575,10 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 What should be considered when deciding between frequent repairs
                 and replacing household appliances like clothes dryers?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1613,12 +1597,10 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 How do appliance repair service providers calculate the service
                 fee for a service call?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1637,12 +1619,10 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 What is the typical range for appliance repair costs, including
                 complex appliances like washing machines and dishwashers?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1660,12 +1640,10 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 Why might some home appliances experience thermostat breaks or
                 door switches issues?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1683,12 +1661,10 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 What factors contribute to the decision of whether a broken
                 dryer is worth repairing?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1707,11 +1683,9 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 How do home warranty plans affect the dryer repair cost?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1730,12 +1704,10 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 How do appliance repair costs for a gas dryer compare to those
                 for electric dryers?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1755,12 +1727,10 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 Can ongoing appliance repair costs for an aging gas dryer
                 justify the initial expense of buying a new model?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
