--- a/src/pages/price-list/oven-repair-cost.astro
+++ b/src/pages/price-list/oven-repair-cost.astro
@@ -315,7 +315,7 @@ import "css/price/style_price.css";
       </div>
       <Btn />
 
-      <div class="job-prices" id="labor-cost-anchor">
+      <div class="job-prices job-prices-oven" id="labor-cost-anchor">
         <div class="head_pricing-policy head_pricing-policy_foto">
           <div class="head_pricing-policy_foto-b">
             <img
