--- a/src/pages/price-list/water-heater-repair-cost.astro
+++ b/src/pages/price-list/water-heater-repair-cost.astro
@@ -314,7 +314,7 @@ import "css/price/style_price.css";
       </div>
       <Btn />
 
-      <div class="job-prices" id="labor-cost-anchor">
+      <div class="job-prices job-prices-cooktop" id="labor-cost-anchor">
         <div class="head-prices">
           <h2>Water Heater Repair Cost - Labor Only Excluding Parts</h2>
           <p>
