--- a/src/css/price/style_price.css
+++ b/src/css/price/style_price.css
@@ -49,6 +49,7 @@ h2 {
   font-size: clamp(35px, 8vw, 60px);
   line-height: clamp(56px, 8vh, 60px);
   font-weight: 900;
+  text-shadow: 2.3px 2.3px 3.7px rgb(21 21 21);
 }
 
 
@@ -375,7 +376,7 @@ main {
   counter-reset: item;
 }
 
-.questions ol > li {
+.questions ol>li {
   counter-increment: item;
   margin-bottom: 15px;
   padding-left: 30px;
@@ -384,7 +385,7 @@ main {
   font-size: clamp(16px, 3vw, 18px);
 }
 
-.questions ol > li::before {
+.questions ol>li::before {
   content: counter(item) "";
   position: absolute;
   left: 10px;
@@ -474,6 +475,20 @@ main {
 #parts-cost-anchor .content_job-prices {
   min-height: 109px;
 }
+
+.job-prices-dryer .content_job-prices,
+.job-prices-oven .content_job-prices {
+  min-height: 110px;
+}
+
+.job-prices-dishwasher .content_job-prices,
+.job-prices-range .content_job-prices,
+.job-prices-stove .content_job-prices,
+.job-prices-cooktop .content_job-prices {
+  min-height: 115px;
+}
+
+
 
 .head-prices {
   text-align: center;
@@ -634,7 +649,8 @@ main {
   margin: 0;
 }
 
-.content-1_maintenance, .content-2_maintenance {
+.content-1_maintenance,
+.content-2_maintenance {
   width: 100%;
   box-shadow: 0 0 8px 3px #87878733;
   border-radius: 20px;
@@ -678,7 +694,7 @@ main {
   transition: 0.3s ease-in-out;
 }
 
-.description_maintenance  li:last-child:after {
+.description_maintenance li:last-child:after {
   content: none;
 }
 
@@ -711,9 +727,9 @@ main {
   filter: drop-shadow(1.5px 1.5px 0.5px #000);
 }
 
-.description_maintenance ol li:hover:before{
-  background:  rgba(0,0,0,.2);
-  box-shadow: 0 0 0 5px rgba(0,0,0,.2);
+.description_maintenance ol li:hover:before {
+  background: rgba(0, 0, 0, .2);
+  box-shadow: 0 0 0 5px rgba(0, 0, 0, .2);
 }
 
 
@@ -727,7 +743,7 @@ main {
   top: 40px;
 }
 
-.description_maintenance ol > li:nth-child(-n+9)::after {
+.description_maintenance ol>li:nth-child(-n+9)::after {
   left: 12px;
 }
 
@@ -760,7 +776,7 @@ main {
   top: -11px;
 }
 
-.description_maintenance ul li:hover:before{
+.description_maintenance ul li:hover:before {
   box-shadow: none;
   background: none;
 }
