--- a/src/pages/price-list/dishwasher-repair-cost.astro
+++ b/src/pages/price-list/dishwasher-repair-cost.astro
@@ -270,7 +270,7 @@ import "css/price/style_price.css";
       </div>
       <Btn />
 
-      <div class="job-prices" id="labor-cost-anchor">
+      <div class="job-prices job-prices-dishwasher" id="labor-cost-anchor">
         <div class="head_pricing-policy head_pricing-policy_foto">
           <div class="head_pricing-policy_foto-b">
             <img
