--- a/src/pages/price-list/range-repair-cost.astro
+++ b/src/pages/price-list/range-repair-cost.astro
@@ -34,7 +34,7 @@ import "css/price/style_price.css";
 <Layout title="Range Repair Cost">
   <Container>
     <main>
-      <h1><span class="animate-charcter">Range Repair Cost</span></h1> 
+      <h1><span class="animate-charcter">Range Repair Cost</span></h1>
 
       <div class="two-col-grid">
         <div class="col-one">
@@ -339,7 +339,7 @@ import "css/price/style_price.css";
     </main>
     <Btn />
 
-    <div class="job-prices" id="labor-cost-anchor">
+    <div class="job-prices job-prices-range" id="labor-cost-anchor">
       <div class="head_pricing-policy head_pricing-policy_foto">
         <div class="head_pricing-policy_foto-b">
           <img
