--- a/src/pages/services/commercial-washing-machine-repair-los-angeles.astro
+++ b/src/pages/services/commercial-washing-machine-repair-los-angeles.astro
@@ -205,7 +205,7 @@ import "css/service/style_services.css";
                 loading="lazy"
                 width="450px"
                 height="450px"
-                alt="Refrigerator Repair "
+                alt="Commercial Washing Machine Repair"
               />
             </div>
 
@@ -331,7 +331,7 @@ import "css/service/style_services.css";
                 src="/commercial-dryer/commercial-dryer-2.webp"
                 width="450px"
                 height="450px"
-                alt="Refrigerator Repair"
+                alt="Commercial Washing Machine Repair"
                 loading="lazy"
               />
             </div>
@@ -467,7 +467,7 @@ import "css/service/style_services.css";
                 src="/commercial-dryer/commercial-dryer-3.webp"
                 width="450px"
                 height="450px"
-                alt="Refrigerator Repair"
+                alt="Commercial Washing Machine Repair"
                 loading="lazy"
               />
             </div>
@@ -1108,7 +1108,7 @@ import "css/service/style_services.css";
                 src="/commercial-dryer/commercial-dryer-4.webp"
                 width="450px"
                 height="450px"
-                alt="Refrigerator Repair"
+                alt="Commercial Washing Machine Repair"
                 loading="lazy"
               />
             </div>
@@ -1504,7 +1504,7 @@ import "css/service/style_services.css";
                 src="/commercial-dryer/commercial-dryer-5.webp"
                 width="450px"
                 height="450px"
-                alt="Refrigerator Repair"
+                alt="Commercial Washing Machine Repair"
                 loading="lazy"
               />
             </div>
@@ -1670,7 +1670,7 @@ import "css/service/style_services.css";
                 src="/commercial-dryer/commercial-dryer-6.webp"
                 width="450px"
                 height="450px"
-                alt="Refrigerator Repair"
+                alt="Commercial Washing Machine Repair"
                 loading="lazy"
               />
             </div>
