--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -47,6 +47,7 @@ const menuitems = [
       {title: "Commercial Fryer Machine Repair", path: "/services/commercial-fryer-machine-repair-los-angeles"},
       {title: "Commercial Bar Refrigerator Repair", path: "/services/bar-refrigerator-repair-los-angeles" },
       {title: "Commercial Washing Machine Repair", path: "/services/commercial-washing-machine-repair-los-angeles" },
+      {title: "Commercial Stove Repair", path: "/services/commercial-stove-repair-los-angeles" },
     ],
   },
 
